Fix firefox/edge/ie alignement of slogan. Fix service script array

--- a/packages/web/management/css/clean/fog.css
+++ b/packages/web/management/css/clean/fog.css
@@ -161,7 +161,7 @@ fieldset {
  */
 #logo h5 {
     position: absolute;
-    width: 210px;
+    min-width: 230px;
     top: 60px;
 }
 /**
